Login, Onboarding, Register

--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,34 @@
-# Logs
-logs
-*.log
+# Node
+node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
-lerna-debug.log*
+package-lock.json
 
-node_modules
-dist
-dist-ssr
+# Build
+dist/
+build/
 *.local
 
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
-.DS_Store
+# Editor / IDE
+.vscode/
+.idea/
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
 *.sw?
+
+# Sistema
+.DS_Store
+Thumbs.db
+
+# Env files (contienen secretos)
+.env
+.env.*
+!.env.example
+
+# Logs
+*.log
+logs/
