feat: configurar desarrollo móvil con soporte para puertos 5173/5174
- Actualizar vite.config.js para permitir conexiones desde red local
- Corregir API URL para usar puerto 8080 del Gateway
- Agregar scripts dev:mobile para desarrollo móvil
- Permitir puertos alternativos cuando 5173 está ocupado

--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "dev:mobile": "vite --mode mobile",
+    "dev:mobile:5174": "vite --mode mobile --port 5174",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
