--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "@mui/x-date-pickers": "^8.11.2",
     "axios": "^1.12.2",
     "jwt-decode": "^4.0.0",
+    "leaflet": "^1.9.4",
     "react": "^19.1.1",
     "react-datepicker": "^8.7.0",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.62.0",
     "react-icons": "^5.5.0",
+    "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.9.1",
     "react-select": "^5.10.2",
     "zod": "^4.1.8",
